Coverity analysis defect 156320: Uninitialized scalar field

XMLWordPrintableJSON

    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.2, v8.1, v8.0, v7.0
    • Storage Execution 2025-08-04, Storage Execution 2025-08-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /data/mci/3b34054db808e84e865ea3adc167bb30/bazel_cache/8efb34a963653a257fe76e59a8ff65e9/execroot/_main/src/mongo/db/sorter/sorter.h:480: UNINIT_CTOR 156320 Class member declaration for "fileIteratorsMaxNum".
      /data/mci/3b34054db808e84e865ea3adc167bb30/bazel_cache/8efb34a963653a257fe76e59a8ff65e9/execroot/_main/src/mongo/db/sorter/sorter_template_defs.h:1375: UNINIT_CTOR 156320 Non-static class member "fileIteratorsMaxNum" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Wei Hu
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: