SERVER-108626 Move fileIteratorsMaxNum definition to the proper subclass (#40230)

GitOrigin-RevId: 8a4ffafa88f1671621d365ea8e9ff419b696cb44